--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -17,11 +17,11 @@ to the people of Laos who taught me to appreciate the small things in life
 (I was a teacher in a Buddhist temple school),
 % to Brandon Havemann who was the best teacher I ever had and who nourished my fascination for biology
 % (when I became a safari guide in the Kruger National Park, South Africa),
-to Mikeal Thollesson (Uppsala Universitet, Sweden) who fostered my enthusiasm for Evolutionary Biology,
+to Mikael Thollesson (Uppsala Universitet, Sweden) who fostered my enthusiasm for Evolutionary Biology,
 to Sophie Caillon (Universit\'e de Montpellier \rom{2}, France) who showed me that communication is key,
 to Scott Edwards (Harvard University, United States) who stopped working on a crucial grant application
 to write a recommendation letter for my application to the University of Oxford,
-to Dirk Mentzler (Ludwig-Maximilians Universit\"at Munich, Germany) who taught me to not blindly trust any statistical results.
+to Dirk Metzler (Ludwig-Maximilians Universit\"at Munich, Germany) who taught me to not blindly trust any statistical results.
 Lastly, I want to thank my friends for their support and their understanding.
 
 
