--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -20,7 +20,11 @@
 
 % Abstract
 \begin{abstract}%\begin{abstractseparate}
-\input{abstract}
+{%
+\setstretch{1.2}%
+\vspace{-2.5mm}%
+\input{abstract}%
+}
 \end{abstract}%\end{abstractseparate}
 
 % Acknowledgements
@@ -37,6 +41,7 @@
 
 {
 \small
+\setstretch{1.225}
 \hyphenchar\font=-1 % disable hyphen
 
 \tableofcontents
