--- a/main.tex
+++ b/main.tex
@@ -21,17 +21,27 @@
 % Thesis information
 \title{Rare and low-frequency variants and \\ predisposition to complex disease}
 \unicrest{./img/oxford-crest}
-\author{Patrick K. Albers}
-\institute{Wellcome Trust Centre for Human Genetics \\ Big Data Institute \\ Medical Sciences Division}
-\college{Green Templeton College}
-\university{University of Oxford}
+\author{%
+\Link{Patrick K. Albers}{mailto:pkalbers@gmail.com}%
+}
+\institute{%
+\Link{Wellcome Trust Centre for Human Genetics}{http://www.well.ox.ac.uk} \\%
+\Link{Big Data Institute}{http://www.bdi.ox.ac.uk} \\%
+\Link{Medical Sciences Division}{http://www.medsci.ox.ac.uk}%
+}
+\college{%
+\Link{Green Templeton College}{http://www.gtc.ox.ac.uk}%
+}
+\university{%
+\Link{University of Oxford}{http://www.ox.ac.uk}%
+}
 \supervisor{Supervised by \\[0.75ex] Professor Gil McVean \\[0.5ex] Professor Mark McCarthy}
 \degree{Doctor of Philosophy (DPhil)}
 \degreedate{Hilary 2017}
 \submitted{Submitted in Partial Fulfilment of the Requirements for the Degree of}
 
 \hypersetup{pdfinfo={%
-Title={Rare and low-frequency variants and predisposition to complex disease (University of Oxford, DPhil thesis)},%
+Title={Rare and low-frequency variants and predisposition to complex disease (University of Oxford; DPhil, PhD thesis)},%
 Author={Patrick K. Albers}%
 }}
 
@@ -105,6 +115,9 @@ Author={Patrick K. Albers}%
 \include{chapter6/six}
 
 
+\newpage
+\thispagestyle{plain}
+\mbox{}
 
 
 % Abbreviations
@@ -118,8 +131,8 @@ it helps or hurts communication.%
 }{Elon Musk}
 
 {%
-\singlespacing%
 \footnotesize%
+\setstretch{1.075}%
 \printglossary[type=\acronymtype,title=Abbreviations]%
 }
 
@@ -142,7 +155,7 @@ can complete the following sentence:\\
 	\singlespacing%
 	\footnotesize%
 	\bibliography{library,manual}%
-}\label{biblio}
+}
 
 
 
@@ -188,32 +201,14 @@ is writing it down.} \\
 \begin{flushleft}
 \includegraphics[width=\textwidth]{./img/stat_clusterload}
 \vspace*{-5ex}
-\small\singlespacing\textbf{Supplementary Figure 3:} Computer cluster usage one month before the submission date of this thesis. Indicated by the \textbf{(A)} number of nodes used and \textbf{(B)} daily maximum of computer memory on the cluster of the Wellcome Trust Centre for Human Genetics.
+\small\singlespacing\textbf{Supplementary Figure 3:} Computer cluster usage one month before the submission date of this thesis. Indicated by \textbf{(A)} the number of nodes used and \textbf{(B)} the daily maximum of computer memory usage on the cluster of the Wellcome Trust Centre for Human Genetics.
 \end{flushleft}
 
 
-
-\cleardoublepage
+\clearpage
 \thispagestyle{empty}
 
 
-
-% \cleardoublepage
-% \thispagestyle{empty}
-% \vspace*{\fill}
-% \begin{quote}
-% \onehalfspacing
-% \begin{enumerate}\itshape
-% \item I have told you more than I know \textup{[...]}.
-% \item What I have told you is subject to change without notice.
-% \item I hope I raised more questions than I have given answers.
-% \item In any case, as usual, a lot more work is necessary.
-% \end{enumerate}
-% \begin{flushright}
-% -- Fuller Albright
-% \end{flushright}
-% \end{quote}
-% \vspace*{\fill}
 
 
 \end{document}
