--- a/library.bib
+++ b/library.bib
@@ -8552,7 +8552,7 @@ pages = {216--234}
 }
 
 @article{Venter:2001fq,
-author = {Venter, J Craig and Adams, Mark D and Myers, Eugene W and Li, Peter W and Mural, Richard J and Sutton, Granger G and Smith, Hamilton O and Yandell, Mark and Evans, Cheryl A and Holt, Robert A and Gocayne, Jeannine D and Amanatides, Peter and Ballew, Richard M and Huson, Daniel H and Wortman, Jennifer Russo and Zhang, Qing and Kodira, Chinnappa D and Zheng, Xiangqun H and Chen, Lin and Skupski, Marian and Subramanian, Gangadharan and Thomas, Paul D and Zhang, Jinghui and Miklos, George L Gabor and Nelson, Catherine and Broder, Samuel and Clark, Andrew G and Nadeau, Joe and McKusick, Victor A and Zinder, Norton and Levine, Arnold J and Roberts, Richard J and Simon, Mel and Slayman, Carolyn and Hunkapiller, Michael and Bolanos, Randall and Delcher, Arthur and Dew, Ian and Fasulo, Daniel and Flanigan, Michael and Florea, Liliana and Halpern, Aaron and Hannenhalli, Sridhar and Kravitz, Saul and Levy, Samuel and Mobarry, Clark and Reinert, Knut and Remington, Karin and Abu-Threideh, Jane and Beasley, Ellen and Biddick, Kendra and Bonazzi, Vivien and Brandon, Rhonda and Cargill, Michele and Chandramouliswaran, Ishwar and Charlab, Rosane and Chaturvedi, Kabir and Deng, Zuoming and Di Francesco, Valentina and Dunn, Patrick and Eilbeck, Karen and Evangelista, Carlos and Gabrielian, Andrei E and Gan, Weiniu and Ge, Wangmao and Gong, Fangcheng and Gu, Zhiping and Guan, Ping and Heiman, Thomas J and Higgins, Maureen E and Ji, Rui-Ru and Ke, Zhaoxi and Ketchum, Karen A and Lai, Zhongwu and Lei, Yiding and Li, Zhenya and Li, Jiayin and Liang, Yong and Lin, Xiaoying and Lu, Fu and Merkulov, Gennady V and Milshina, Natalia and Moore, Helen M and Naik, Ashwinikumar K and Narayan, Vaibhav A and Neelam, Beena and Nusskern, Deborah and Rusch, Douglas B and Salzberg, Steven and Shao, Wei and Shue, Bixiong and Sun, Jingtao and Wang, Zhen Yuan and Wang, Aihui and Wang, Xin and Wang, Jian and Wei, Ming-Hui and Wides, Ron and Xiao, Chunlin and Yan, Chunhua and Yao, Alison and Ye, Jane and Zhan, Ming and Zhang, Weiqing and Zhang, Hongyu and Zhao, Qi and Zheng, Liansheng and Zhong, Fei and Zhong, Wenyan and Zhu, Shiaoping C and Zhao, Shaying and Gilbert, Dennis and Baumhueter, Suzanna and Spier, Gene and Carter, Christine and Cravchik, Anibal and Woodage, Trevor and Ali, Feroze and An, Huijin and Awe, Aderonke and Baldwin, Danita and Baden, Holly and Barnstead, Mary and Barrow, Ian and Beeson, Karen and Busam, Dana and Carver, Amy and {Angela Center} and Cheng, Ming Lai and Curry, Liz and Danaher, Steve and Davenport, Lionel and Desilets, Raymond and Dietz, Susanne and Dodson, Kristina and Doup, Lisa and Ferriera, Steven and Garg, Neha and Gluecksmann, Andres and Hart, Brit and Haynes, Jason and Haynes, Charles and Heiner, Cheryl and Hladun, Suzanne and Hostin, Damon and Houck, Jarrett and Howland, Timothy and Ibegwam, Chinyere and Johnson, Jeffery and Kalush, Francis and Kline, Lesley and Koduru, Shashi and Love, Amy and Mann, Felecia and May, David and McCawley, Steven and McIntosh, Tina and McMullen, Ivy and Moy, Mee and Moy, Linda and Murphy, Brian and Nelson, Keith and Pfannkoch, Cynthia and Pratts, Eric and Puri, Vinita and Qureshi, Hina and Reardon, Matthew and Rodriguez, Robert and Rogers, Yu-Hui and Romblad, Deanna and Ruhfel, Bob and Scott, Richard and Sitter, Cynthia and Smallwood, Michelle and Stewart, Erin and Strong, Renee and Suh, Ellen and Thomas, Reginald and Tint, Ni Ni and Tse, Sukyee and Vech, Claire and Wang, Gary and Wetter, Jeremy and Williams, Sherita and Williams, Monica and Windsor, Sandra and Winn-Deen, Emily and Wolfe, Keriellen and Zaveri, Jayshree and Zaveri, Karena and Abril, Josep F and Guigo, Roderic and Campbell, Michael J and Sjolander, Kimmen V and Karlak, Brian and Kejariwal, Anish and Mi, Huaiyu and Lazareva, Betty and Hatton, Thomas and Narechania, Apurva and Diemer, Karen and Muruganujan, Anushya and Guo, Nan and Sato, Shinji and Bafna, Vineet and Istrail, Sorin and Lippert, Ross and Schwartz, Russell and Walenz, Brian and Yooseph, Shibu and Allen, David and Basu, Anand and Baxendale, James and Blick, Louis and Caminha, Marcelo and Carnes-Stine, John and Caulk, Parris and Chiang, Yen-Hui and Coyne, My and Dahlke, Carl and Mays, Anne Deslattes and Dombroski, Maria and Donnelly, Michael and Ely, Dale and Esparham, Shiva and Fosler, Carl and Gire, Harold and Glanowski, Stephen and Glasser, Kenneth and Glodek, Anna and Gorokhov, Mark and Graham, Ken and Gropman, Barry and Harris, Michael and Heil, Jeremy and Henderson, Scott and Hoover, Jeffrey and Jennings, Donald and Jordan, Catherine and Jordan, James and Kasha, John and Kagan, Leonid and Kraft, Cheryl and Levitsky, Alexander and Lewis, Mark and Liu, Xiangjun and Lopez, John and Ma, Daniel and Majoros...},
+author = {Venter, J Craig and Adams, Mark D and Myers, Eugene W and Li, Peter W and Mural, Richard J and Sutton, Granger G and Smith, Hamilton O and Yandell, Mark and Evans, Cheryl A and Holt, Robert A and others},
 title = {{The Sequence of the Human Genome}},
 journal = {Science},
 year = {2001},
