--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -19,6 +19,12 @@
 % }{Sir Isaac Newton, 1676}
 
 % Abstract
+
+\begin{savequote}[15cm]\larger\sffamily\vspace*{-15mm}
+{\larger Rare and low-frequency variants and predisposition to complex disease} \\
+Patrick K. Albers, Green Templeton College, University of Oxford \\
+DPhil thesis, Hilary 2017
+\end{savequote}
 \begin{abstract}% \begin{abstractseparate}
 {%
 \setstretch{1.2}%
